@@ -1,3 +1,7 @@
+2003-01-24  Joe English  <jenglish@users.sourceforge.net>
+	* tree.tcl (Tree::delete, Tree::_subdelete): remove all deleted
+	nodes from the the selection [Bug #621178].
+
 2003-01-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* labelentry.tcl: fixed -textvariable option [bug #649383]
@@ -14,7 +18,8 @@
 	[Bug #519189] (chevreux)
 
 	* tree.tcl (_see): change to always show left edge of requested
-	item. [Patch #556077] (english)
+	item. [Patch #556077] (english)  [NOTE: also included Patch #621331 
+	"Allow delete of selected Tree nodes"]
 
 	* dynhelp.tcl: allow variable and balloon help simultaneously.
 	[Patch #567982] (decoster)
